--- a/data/slide1.css
+++ b/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_ecc00105,#spr2_ecc00105 {clip:rect(0px,960px,540px,0px);}#txt0_ecc00105,#txt1_ecc00105 {font-family:fnt4; font-size:32px; line-height:46px; color:#ffffff;}
+#spr1_692f7048,#spr2_692f7048 {clip:rect(0px,1280px,720px,0px);}#txt0_692f7048,#txt1_692f7048,#txt2_692f7048,#txt3_692f7048,#txt4_692f7048 {font-family:fnt4; font-size:42.667px; line-height:62px; font-weight:bold; color:#ffffff;}
